--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* พื้นหลังหลักของเว็บ */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Bai Jamjuree", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     background-color: #1e1e2f;
 }
 
